Colab kullanılarak oluşturuldu

--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -29,11 +29,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "C2EjpfFhJSay"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "C2EjpfFhJSay",
+        "outputId": "b9fd3f22-7ff4-4a31-a9bb-f3bf36e7e472"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"hello world\")"
       ]
