--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO06BjNs+zOP0+eaWnxY+9Z",
+      "authorship_tag": "ABX9TyOqojm/HY7koyXpahVjGl7O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,25 +29,117 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "source": [
+        "import random"
+      ],
+      "metadata": {
+        "id": "oPq-AASHOaiH"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GOAL_VALUE = 30;\n",
+        "\n",
+        "POPULATION_SIZE = 10\n",
+        "\n",
+        "CHROMOSOME_SIZE = 4"
+      ],
+      "metadata": {
+        "id": "2-HzenjPNMoQ"
+      },
+      "execution_count": 62,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def createNewPopulation(size):\n",
+        "  POPULATION = []\n",
+        "  for i in range(size):\n",
+        "    chromosome = []\n",
+        "    for j in range(CHROMOSOME_SIZE):\n",
+        "      gen = random.randint(0,GOAL_VALUE)\n",
+        "      chromosome.append(gen)\n",
+        "    POPULATION.append(chromosome)\n",
+        "  return POPULATION"
+      ],
+      "metadata": {
+        "id": "TtexMc1sNq29"
+      },
+      "execution_count": 63,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {
+        "id": "C2EjpfFhJSay"
+      },
+      "outputs": [],
+      "source": [
+        "def goalFunc(a,b,c,d):\n",
+        "  return (a) + (2 * b) + (3 * c) + (4 * d)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def fitness(isGoalReaced):\n",
+        "  return abs(isGoalReaced - GOAL_VALUE)"
+      ],
+      "metadata": {
+        "id": "YCAPZGKcM5SA"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "POPULATION = createNewPopulation(POPULATION_SIZE)"
+      ],
+      "metadata": {
+        "id": "yh_ElhnFNy0C"
+      },
+      "execution_count": 64,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "POPULATION"
+      ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "C2EjpfFhJSay",
-        "outputId": "b9fd3f22-7ff4-4a31-a9bb-f3bf36e7e472"
+        "id": "uyug4kfaP-Kv",
+        "outputId": "8cba7235-bfbd-4a63-b741-c82ee02fb6a3"
       },
+      "execution_count": 65,
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "hello world\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[6, 3, 20, 12],\n",
+              " [25, 23, 27, 13],\n",
+              " [2, 5, 9, 22],\n",
+              " [10, 26, 10, 26],\n",
+              " [6, 15, 0, 24],\n",
+              " [30, 8, 11, 16],\n",
+              " [2, 8, 10, 20],\n",
+              " [22, 10, 11, 21],\n",
+              " [19, 27, 21, 1],\n",
+              " [15, 16, 25, 17]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
         }
-      ],
-      "source": [
-        "print(\"hello world\")"
       ]
     }
   ]
