goal func output

--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOqojm/HY7koyXpahVjGl7O",
+      "authorship_tag": "ABX9TyPSYZW2wjX5+ELGyffArKqV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -74,26 +74,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 72,
       "metadata": {
         "id": "C2EjpfFhJSay"
       },
       "outputs": [],
       "source": [
-        "def goalFunc(a,b,c,d):\n",
-        "  return (a) + (2 * b) + (3 * c) + (4 * d)"
+        "# chromosome[0] - a , chromosome[1] - b ....\n",
+        "def mainFunc(chromosome):\n",
+        "  return (chromosome[0]) + (2 * chromosome[1]) + (3 * chromosome[2] ) + (4 *  chromosome[3])"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "def fitness(isGoalReaced):\n",
-        "  return abs(isGoalReaced - GOAL_VALUE)"
+        "def goalFunc(mainFunc_result):\n",
+        "  return abs(mainFunc_result - GOAL_VALUE)"
       ],
       "metadata": {
         "id": "YCAPZGKcM5SA"
       },
-      "execution_count": 26,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -139,6 +140,47 @@
           },
           "metadata": {},
           "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "goalFunc_output = []\n",
+        "for i in range(len(POPULATION)):\n",
+        "  m_result = mainFunc(POPULATION[i])\n",
+        "  g_result = goalFunc(m_result)\n",
+        "  goalFunc_output.append(g_result)"
+      ],
+      "metadata": {
+        "id": "_6EiSuIuRvNX"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "goalFunc_output"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fIfmN_DtVnY2",
+        "outputId": "520b50f0-cefb-4bd9-a36b-45d370708d55"
+      },
+      "execution_count": 75,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[90, 174, 97, 166, 102, 113, 98, 129, 110, 160]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 75
         }
       ]
     }
