--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPSYZW2wjX5+ELGyffArKqV",
+      "authorship_tag": "ABX9TyNQ3I+JirLYpo90XsJ3a7A3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,6 +100,18 @@
     {
       "cell_type": "code",
       "source": [
+        "def fitness(goalFunc_result):\n",
+        "  return 1 / (goalFunc_result + 1)"
+      ],
+      "metadata": {
+        "id": "-cb0nJRJWCIU"
+      },
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "POPULATION = createNewPopulation(POPULATION_SIZE)"
       ],
       "metadata": {
@@ -181,6 +193,114 @@
           },
           "metadata": {},
           "execution_count": 75
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fitness_output = []\n",
+        "for i in range(len(POPULATION)):\n",
+        "  f_result = fitness(goalFunc_output[i])\n",
+        "  fitness_output.append(f_result)"
+      ],
+      "metadata": {
+        "id": "e2UPSc4_WLuj"
+      },
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fitness_output"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jGEA8cG_WOc3",
+        "outputId": "878862c8-ae90-4833-b07b-2dd5b4c12639"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.01098901098901099,\n",
+              " 0.005714285714285714,\n",
+              " 0.01020408163265306,\n",
+              " 0.005988023952095809,\n",
+              " 0.009708737864077669,\n",
+              " 0.008771929824561403,\n",
+              " 0.010101010101010102,\n",
+              " 0.007692307692307693,\n",
+              " 0.009009009009009009,\n",
+              " 0.006211180124223602]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 78
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fitness_total = sum(fitness_output)"
+      ],
+      "metadata": {
+        "id": "XNC_qWU6zoAp"
+      },
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "selection_probability = []\n",
+        "for i in range(len(POPULATION)):\n",
+        "  selection_probability.append(fitness_output[i] / fitness_total)"
+      ],
+      "metadata": {
+        "id": "s3UeHSzq0B7_"
+      },
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "selection_probability"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HoU2_Bhv0Xll",
+        "outputId": "34626267-1512-4c18-bcdf-1f79267fcd79"
+      },
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.13021763341237616,\n",
+              " 0.0677131693744356,\n",
+              " 0.1209163738829207,\n",
+              " 0.07095691401512713,\n",
+              " 0.11504664699540028,\n",
+              " 0.10394565474145814,\n",
+              " 0.11969499636895183,\n",
+              " 0.0911523433886633,\n",
+              " 0.10675499676149756,\n",
+              " 0.07360127105916912]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 82
         }
       ]
     }
