created new population with crossover

--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNQ3I+JirLYpo90XsJ3a7A3",
+      "authorship_tag": "ABX9TyMRvJBafEzIqrwvr+bkV6h2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -301,6 +301,180 @@
           },
           "metadata": {},
           "execution_count": 82
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cumulative_probability = []\n",
+        "cumulative_sum = 0\n",
+        "for probability in selection_probability:\n",
+        "    cumulative_sum += probability\n",
+        "    cumulative_probability.append(cumulative_sum)"
+      ],
+      "metadata": {
+        "id": "d69bov9-1s0P"
+      },
+      "execution_count": 83,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cumulative_probability"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n3uOZ75I1u5y",
+        "outputId": "f963e12f-7f92-4414-8987-06dc04b018ef"
+      },
+      "execution_count": 84,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0.13021763341237616,\n",
+              " 0.19793080278681174,\n",
+              " 0.31884717666973245,\n",
+              " 0.38980409068485955,\n",
+              " 0.5048507376802598,\n",
+              " 0.6087963924217179,\n",
+              " 0.7284913887906698,\n",
+              " 0.8196437321793331,\n",
+              " 0.9263987289408306,\n",
+              " 0.9999999999999998]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 84
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mating_pool = []\n",
+        "for _ in range(POPULATION_SIZE):\n",
+        "    random_number = random.random()\n",
+        "    for i in range(len(cumulative_probability)):\n",
+        "        if random_number <= cumulative_probability[i]:\n",
+        "            mating_pool.append(POPULATION[i])\n",
+        "            break"
+      ],
+      "metadata": {
+        "id": "T-pOUwcF15So"
+      },
+      "execution_count": 86,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mating_pool"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "l4GZko5B1-r1",
+        "outputId": "a93d26f6-2b72-4ad7-81e3-9d38282c3dec"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[2, 8, 10, 20],\n",
+              " [6, 3, 20, 12],\n",
+              " [22, 10, 11, 21],\n",
+              " [10, 26, 10, 26],\n",
+              " [22, 10, 11, 21],\n",
+              " [10, 26, 10, 26],\n",
+              " [19, 27, 21, 1],\n",
+              " [30, 8, 11, 16],\n",
+              " [30, 8, 11, 16],\n",
+              " [10, 26, 10, 26]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 87
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def crossover(parent1, parent2):\n",
+        "    crossover_point = random.randint(1, CHROMOSOME_SIZE - 1)\n",
+        "\n",
+        "    offspring1 = parent1[:crossover_point] + parent2[crossover_point:]\n",
+        "    offspring2 = parent2[:crossover_point] + parent1[crossover_point:]\n",
+        "\n",
+        "    return offspring1, offspring2"
+      ],
+      "metadata": {
+        "id": "c14vFtr82snH"
+      },
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_population = []\n",
+        "\n",
+        "for i in range(0, POPULATION_SIZE, 2):\n",
+        "    parent1 = mating_pool[i]\n",
+        "    parent2 = mating_pool[i + 1] if (i + 1) < POPULATION_SIZE else mating_pool[0]  # Handle odd-size population\n",
+        "\n",
+        "    offspring1, offspring2 = crossover(parent1, parent2)\n",
+        "\n",
+        "    new_population.append(offspring1)\n",
+        "    new_population.append(offspring2)"
+      ],
+      "metadata": {
+        "id": "3XROnCqD21EY"
+      },
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_population"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vSF_IWPc24dO",
+        "outputId": "8122dcc9-000e-4634-8e21-1e02442d44c9"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[2, 8, 20, 12],\n",
+              " [6, 3, 10, 20],\n",
+              " [22, 10, 10, 26],\n",
+              " [10, 26, 11, 21],\n",
+              " [22, 10, 10, 26],\n",
+              " [10, 26, 11, 21],\n",
+              " [19, 8, 11, 16],\n",
+              " [30, 27, 21, 1],\n",
+              " [30, 26, 10, 26],\n",
+              " [10, 8, 11, 16]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 90
         }
       ]
     }
