--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMRvJBafEzIqrwvr+bkV6h2",
+      "authorship_tag": "ABX9TyMN0fKnRG3mj3qaBGHI8dmC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -475,6 +475,140 @@
           },
           "metadata": {},
           "execution_count": 90
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mutate(chromosome, mutation_rate=0.05):\n",
+        "    for i in range(len(chromosome)):\n",
+        "        if random.random() < mutation_rate:\n",
+        "            chromosome[i] = random.randint(0, GOAL_VALUE)\n",
+        "    return chromosome"
+      ],
+      "metadata": {
+        "id": "e9udzpdZ3UMB"
+      },
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mutated_population = []\n",
+        "for individual in new_population:\n",
+        "    mutated_individual = mutate(individual)\n",
+        "    mutated_population.append(mutated_individual)"
+      ],
+      "metadata": {
+        "id": "KbiMjJ763ePt"
+      },
+      "execution_count": 92,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mutated_population"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oADhtFxL3fDP",
+        "outputId": "2c0ea83c-afe0-4989-eafc-0cc423daec87"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[[2, 8, 20, 12],\n",
+              " [6, 3, 10, 20],\n",
+              " [22, 10, 10, 16],\n",
+              " [10, 26, 21, 21],\n",
+              " [22, 10, 10, 26],\n",
+              " [10, 26, 11, 21],\n",
+              " [19, 8, 11, 16],\n",
+              " [30, 27, 21, 1],\n",
+              " [30, 26, 10, 26],\n",
+              " [24, 8, 11, 16]]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 93
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def genetic_algorithm():\n",
+        "    for generation in range(100):\n",
+        "        new_population = []\n",
+        "        for i in range(0, POPULATION_SIZE, 2):\n",
+        "            parent1 = mating_pool[i]\n",
+        "            parent2 = mating_pool[i + 1] if (i + 1) < POPULATION_SIZE else mating_pool[0]\n",
+        "            offspring1, offspring2 = crossover(parent1, parent2)\n",
+        "            new_population.append(offspring1)\n",
+        "            new_population.append(offspring2)\n",
+        "\n",
+        "        POPULATION = new_population\n",
+        "\n",
+        "    return POPULATION"
+      ],
+      "metadata": {
+        "id": "ksfPkAE04eHh"
+      },
+      "execution_count": 97,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "new_population = genetic_algorithm()\n",
+        "print(new_population)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-hYmhjRH4x3_",
+        "outputId": "eeffdd31-679f-4fd5-ec46-857cb641e811"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[2, 8, 10, 12], [6, 3, 20, 20], [22, 26, 10, 26], [10, 10, 11, 21], [22, 26, 10, 26], [10, 10, 11, 21], [19, 27, 21, 16], [30, 8, 11, 1], [30, 8, 10, 26], [10, 26, 11, 16]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(mainFunc(new_population[0]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RmwGsN0540hR",
+        "outputId": "ccffae8e-17dd-4afc-f245-5e8701b50642"
+      },
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "96\n"
+          ]
         }
       ]
     }
