--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMN0fKnRG3mj3qaBGHI8dmC",
+      "authorship_tag": "ABX9TyMpKf5DlL0rdiefUWd+K16Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,6 +52,15 @@
       },
       "execution_count": 62,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Functions\n"
+      ],
+      "metadata": {
+        "id": "wyODKjP-7n8C"
+      }
     },
     {
       "cell_type": "code",
@@ -112,303 +121,6 @@
     {
       "cell_type": "code",
       "source": [
-        "POPULATION = createNewPopulation(POPULATION_SIZE)"
-      ],
-      "metadata": {
-        "id": "yh_ElhnFNy0C"
-      },
-      "execution_count": 64,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "POPULATION"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uyug4kfaP-Kv",
-        "outputId": "8cba7235-bfbd-4a63-b741-c82ee02fb6a3"
-      },
-      "execution_count": 65,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[6, 3, 20, 12],\n",
-              " [25, 23, 27, 13],\n",
-              " [2, 5, 9, 22],\n",
-              " [10, 26, 10, 26],\n",
-              " [6, 15, 0, 24],\n",
-              " [30, 8, 11, 16],\n",
-              " [2, 8, 10, 20],\n",
-              " [22, 10, 11, 21],\n",
-              " [19, 27, 21, 1],\n",
-              " [15, 16, 25, 17]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 65
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "goalFunc_output = []\n",
-        "for i in range(len(POPULATION)):\n",
-        "  m_result = mainFunc(POPULATION[i])\n",
-        "  g_result = goalFunc(m_result)\n",
-        "  goalFunc_output.append(g_result)"
-      ],
-      "metadata": {
-        "id": "_6EiSuIuRvNX"
-      },
-      "execution_count": 74,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "goalFunc_output"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fIfmN_DtVnY2",
-        "outputId": "520b50f0-cefb-4bd9-a36b-45d370708d55"
-      },
-      "execution_count": 75,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[90, 174, 97, 166, 102, 113, 98, 129, 110, 160]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 75
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "fitness_output = []\n",
-        "for i in range(len(POPULATION)):\n",
-        "  f_result = fitness(goalFunc_output[i])\n",
-        "  fitness_output.append(f_result)"
-      ],
-      "metadata": {
-        "id": "e2UPSc4_WLuj"
-      },
-      "execution_count": 77,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "fitness_output"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "jGEA8cG_WOc3",
-        "outputId": "878862c8-ae90-4833-b07b-2dd5b4c12639"
-      },
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.01098901098901099,\n",
-              " 0.005714285714285714,\n",
-              " 0.01020408163265306,\n",
-              " 0.005988023952095809,\n",
-              " 0.009708737864077669,\n",
-              " 0.008771929824561403,\n",
-              " 0.010101010101010102,\n",
-              " 0.007692307692307693,\n",
-              " 0.009009009009009009,\n",
-              " 0.006211180124223602]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 78
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "fitness_total = sum(fitness_output)"
-      ],
-      "metadata": {
-        "id": "XNC_qWU6zoAp"
-      },
-      "execution_count": 79,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "selection_probability = []\n",
-        "for i in range(len(POPULATION)):\n",
-        "  selection_probability.append(fitness_output[i] / fitness_total)"
-      ],
-      "metadata": {
-        "id": "s3UeHSzq0B7_"
-      },
-      "execution_count": 81,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "selection_probability"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "HoU2_Bhv0Xll",
-        "outputId": "34626267-1512-4c18-bcdf-1f79267fcd79"
-      },
-      "execution_count": 82,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.13021763341237616,\n",
-              " 0.0677131693744356,\n",
-              " 0.1209163738829207,\n",
-              " 0.07095691401512713,\n",
-              " 0.11504664699540028,\n",
-              " 0.10394565474145814,\n",
-              " 0.11969499636895183,\n",
-              " 0.0911523433886633,\n",
-              " 0.10675499676149756,\n",
-              " 0.07360127105916912]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 82
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "cumulative_probability = []\n",
-        "cumulative_sum = 0\n",
-        "for probability in selection_probability:\n",
-        "    cumulative_sum += probability\n",
-        "    cumulative_probability.append(cumulative_sum)"
-      ],
-      "metadata": {
-        "id": "d69bov9-1s0P"
-      },
-      "execution_count": 83,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "cumulative_probability"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "n3uOZ75I1u5y",
-        "outputId": "f963e12f-7f92-4414-8987-06dc04b018ef"
-      },
-      "execution_count": 84,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[0.13021763341237616,\n",
-              " 0.19793080278681174,\n",
-              " 0.31884717666973245,\n",
-              " 0.38980409068485955,\n",
-              " 0.5048507376802598,\n",
-              " 0.6087963924217179,\n",
-              " 0.7284913887906698,\n",
-              " 0.8196437321793331,\n",
-              " 0.9263987289408306,\n",
-              " 0.9999999999999998]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 84
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mating_pool = []\n",
-        "for _ in range(POPULATION_SIZE):\n",
-        "    random_number = random.random()\n",
-        "    for i in range(len(cumulative_probability)):\n",
-        "        if random_number <= cumulative_probability[i]:\n",
-        "            mating_pool.append(POPULATION[i])\n",
-        "            break"
-      ],
-      "metadata": {
-        "id": "T-pOUwcF15So"
-      },
-      "execution_count": 86,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mating_pool"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "l4GZko5B1-r1",
-        "outputId": "a93d26f6-2b72-4ad7-81e3-9d38282c3dec"
-      },
-      "execution_count": 87,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[2, 8, 10, 20],\n",
-              " [6, 3, 20, 12],\n",
-              " [22, 10, 11, 21],\n",
-              " [10, 26, 10, 26],\n",
-              " [22, 10, 11, 21],\n",
-              " [10, 26, 10, 26],\n",
-              " [19, 27, 21, 1],\n",
-              " [30, 8, 11, 16],\n",
-              " [30, 8, 11, 16],\n",
-              " [10, 26, 10, 26]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 87
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "def crossover(parent1, parent2):\n",
         "    crossover_point = random.randint(1, CHROMOSOME_SIZE - 1)\n",
         "\n",
@@ -422,61 +134,6 @@
       },
       "execution_count": 88,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "new_population = []\n",
-        "\n",
-        "for i in range(0, POPULATION_SIZE, 2):\n",
-        "    parent1 = mating_pool[i]\n",
-        "    parent2 = mating_pool[i + 1] if (i + 1) < POPULATION_SIZE else mating_pool[0]  # Handle odd-size population\n",
-        "\n",
-        "    offspring1, offspring2 = crossover(parent1, parent2)\n",
-        "\n",
-        "    new_population.append(offspring1)\n",
-        "    new_population.append(offspring2)"
-      ],
-      "metadata": {
-        "id": "3XROnCqD21EY"
-      },
-      "execution_count": 89,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "new_population"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "vSF_IWPc24dO",
-        "outputId": "8122dcc9-000e-4634-8e21-1e02442d44c9"
-      },
-      "execution_count": 90,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[2, 8, 20, 12],\n",
-              " [6, 3, 10, 20],\n",
-              " [22, 10, 10, 26],\n",
-              " [10, 26, 11, 21],\n",
-              " [22, 10, 10, 26],\n",
-              " [10, 26, 11, 21],\n",
-              " [19, 8, 11, 16],\n",
-              " [30, 27, 21, 1],\n",
-              " [30, 26, 10, 26],\n",
-              " [10, 8, 11, 16]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 90
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -496,118 +153,124 @@
     {
       "cell_type": "code",
       "source": [
-        "mutated_population = []\n",
-        "for individual in new_population:\n",
-        "    mutated_individual = mutate(individual)\n",
-        "    mutated_population.append(mutated_individual)"
+        "def calculate_fitness(population):\n",
+        "    fitness_output = []\n",
+        "    for chromosome in population:\n",
+        "        main_result = mainFunc(chromosome)\n",
+        "        goal_result = goalFunc(main_result)\n",
+        "        fitness_result = fitness(goal_result)\n",
+        "        fitness_output.append(fitness_result)\n",
+        "    return fitness_output"
       ],
       "metadata": {
-        "id": "KbiMjJ763ePt"
+        "id": "VUrKE4GN8Tne"
       },
-      "execution_count": 92,
+      "execution_count": 99,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "mutated_population"
+        "def calculate_selection_probability(fitness_output):\n",
+        "    fitness_total = sum(fitness_output)\n",
+        "    selection_probability = [f / fitness_total for f in fitness_output]\n",
+        "    return selection_probability"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oADhtFxL3fDP",
-        "outputId": "2c0ea83c-afe0-4989-eafc-0cc423daec87"
+        "id": "uU5oQ81P8XAF"
       },
-      "execution_count": 93,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[2, 8, 20, 12],\n",
-              " [6, 3, 10, 20],\n",
-              " [22, 10, 10, 16],\n",
-              " [10, 26, 21, 21],\n",
-              " [22, 10, 10, 26],\n",
-              " [10, 26, 11, 21],\n",
-              " [19, 8, 11, 16],\n",
-              " [30, 27, 21, 1],\n",
-              " [30, 26, 10, 26],\n",
-              " [24, 8, 11, 16]]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 93
-        }
-      ]
+      "execution_count": 100,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def select_mating_pool(population, selection_probability):\n",
+        "    cumulative_probability = []\n",
+        "    cumulative_sum = 0\n",
+        "    for probability in selection_probability:\n",
+        "        cumulative_sum += probability\n",
+        "        cumulative_probability.append(cumulative_sum)\n",
+        "\n",
+        "    mating_pool = []\n",
+        "    for _ in range(POPULATION_SIZE):\n",
+        "        random_number = random.random()\n",
+        "        for i in range(len(cumulative_probability)):\n",
+        "            if random_number <= cumulative_probability[i]:\n",
+        "                mating_pool.append(population[i])\n",
+        "                break\n",
+        "    return mating_pool"
+      ],
+      "metadata": {
+        "id": "bhIx8dW_8ZoZ"
+      },
+      "execution_count": 101,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Genetic Algorithm\n"
+      ],
+      "metadata": {
+        "id": "d8Tue4-U7j0E"
+      }
     },
     {
       "cell_type": "code",
       "source": [
         "def genetic_algorithm():\n",
-        "    for generation in range(100):\n",
+        "    population = createNewPopulation(POPULATION_SIZE)\n",
+        "    solutions = [];\n",
+        "\n",
+        "    for generation in range(1000):\n",
+        "        fitness_output = calculate_fitness(population)\n",
+        "        selection_probability = calculate_selection_probability(fitness_output)\n",
+        "        mating_pool = select_mating_pool(population, selection_probability)\n",
+        "\n",
         "        new_population = []\n",
         "        for i in range(0, POPULATION_SIZE, 2):\n",
         "            parent1 = mating_pool[i]\n",
         "            parent2 = mating_pool[i + 1] if (i + 1) < POPULATION_SIZE else mating_pool[0]\n",
         "            offspring1, offspring2 = crossover(parent1, parent2)\n",
-        "            new_population.append(offspring1)\n",
-        "            new_population.append(offspring2)\n",
+        "            new_population.append(mutate(offspring1))\n",
+        "            new_population.append(mutate(offspring2))\n",
         "\n",
-        "        POPULATION = new_population\n",
+        "        population = new_population\n",
         "\n",
-        "    return POPULATION"
+        "\n",
+        "        for individual in population:\n",
+        "            if mainFunc(individual) == GOAL_VALUE:\n",
+        "              if individual not in solutions:\n",
+        "                    solutions.append(individual)\n",
+        "\n",
+        "    return solutions"
       ],
       "metadata": {
         "id": "ksfPkAE04eHh"
       },
-      "execution_count": 97,
+      "execution_count": 123,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "new_population = genetic_algorithm()\n",
-        "print(new_population)"
+        "print(genetic_algorithm())"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-hYmhjRH4x3_",
-        "outputId": "eeffdd31-679f-4fd5-ec46-857cb641e811"
+        "outputId": "156c67c2-cd8d-4141-ebd7-c142c85be2d3"
       },
-      "execution_count": 98,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[2, 8, 10, 12], [6, 3, 20, 20], [22, 26, 10, 26], [10, 10, 11, 21], [22, 26, 10, 26], [10, 10, 11, 21], [19, 27, 21, 16], [30, 8, 11, 1], [30, 8, 10, 26], [10, 26, 11, 16]]\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "print(mainFunc(new_population[0]))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "RmwGsN0540hR",
-        "outputId": "ccffae8e-17dd-4afc-f245-5e8701b50642"
-      },
-      "execution_count": 96,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "96\n"
+            "[[2, 1, 2, 5]]\n"
           ]
         }
       ]
