--- a/geneticAlgorithm.ipynb
+++ b/geneticAlgorithm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMpKf5DlL0rdiefUWd+K16Z",
+      "authorship_tag": "ABX9TyOZjihWxAFsHsdhig5gKT1G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -241,15 +241,14 @@
         "\n",
         "        for individual in population:\n",
         "            if mainFunc(individual) == GOAL_VALUE:\n",
-        "              if individual not in solutions:\n",
-        "                    solutions.append(individual)\n",
-        "\n",
-        "    return solutions"
+        "                print(f\"Solution found in generation {generation}: {individual}\")\n",
+        "                return True;\n",
+        "    return False;"
       ],
       "metadata": {
         "id": "ksfPkAE04eHh"
       },
-      "execution_count": 123,
+      "execution_count": 136,
       "outputs": []
     },
     {
@@ -262,15 +261,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-hYmhjRH4x3_",
-        "outputId": "156c67c2-cd8d-4141-ebd7-c142c85be2d3"
+        "outputId": "d91421de-b27b-4779-826b-b012d918ab8a"
       },
-      "execution_count": 127,
+      "execution_count": 137,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[2, 1, 2, 5]]\n"
+            "Solution found in generation 49: [18, 0, 0, 3]\n",
+            "True\n"
           ]
         }
       ]
